[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/OvenItemSlot.gd" type="Script" id=1]

[node name="OvenItemSlot" type="Node2D"]
position = Vector2( 10.0793, 0 )
script = ExtResource( 1 )

[node name="BakeTimer" type="Timer" parent="."]
wait_time = 90.0
one_shot = true

[node name="LabelsContainer" type="VBoxContainer" parent="."]
margin_left = 6.23633
margin_top = 4.4545
margin_right = 51.2363
margin_bottom = 44.4545
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemName" type="Label" parent="LabelsContainer"]
margin_right = 45.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "pizza 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeRemaining" type="Label" parent="LabelsContainer"]
margin_top = 20.0
margin_right = 45.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1:30"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsContainer" type="VBoxContainer" parent="."]
margin_top = 47.2176
margin_right = 61.0
margin_bottom = 87.2176
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Insert" type="Button" parent="ActionsContainer"]
margin_right = 61.0
margin_bottom = 20.0
text = "insert"

[node name="Remove" type="Button" parent="ActionsContainer"]
visible = false
margin_top = 24.0
margin_right = 61.0
margin_bottom = 44.0
text = "remove"

[node name="CutPizza" type="Button" parent="ActionsContainer"]
visible = false
margin_top = 48.0
margin_right = 61.0
margin_bottom = 68.0
text = "cut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxPizza" type="Button" parent="ActionsContainer"]
visible = false
margin_top = 48.0
margin_right = 61.0
margin_bottom = 68.0
text = "box"
__meta__ = {
"_edit_use_anchors_": false
}
